# parse-study

./: CMakeLists.txt
inc/: productdto.h  productmodel.h
qml/: App.qml
res/: parse.qrc
src/: main.cpp  productdto.cpp  productmodel.cpp
